@@ -12,6 +12,8 @@ dependencies {
 
   implementation "org.plumelib:hashmap-util:${versions.hashmapUtil}"
 
+  testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
   // External dependencies:
   // If you add an external dependency, you must shadow its packages both in the dataflow-shaded
   // artifact (see shadowJar block below) and also in checker.jar (see the comment in
@@ -66,6 +68,10 @@ createDataflowShaded('errorprone')
 task manual(type: Exec, group: 'Documentation') {
   description = 'Build the manual'
   commandLine 'make', '-C', 'manual'
+}
+
+clean {
+  delete('manual/checker-framework-dataflow-manual.aux' ,'manual/checker-framework-dataflow-manual.log','manual/checker-framework-dataflow-manual.out','manual/checker-framework-dataflow-manual.pdf')
 }
 
 tasks.create(name: 'allDataflowTests', group: 'Verification') {
@@ -126,6 +132,8 @@ def testDataflowAnalysis(taskName, dirName, className, diff) {
         'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
         '--add-opens',
         'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-opens',
+        'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
         '--add-opens',
         'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
         '--add-opens',
